templates/install/resources/standard-authservice/external-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: enmasse
  name: standard-authservice-external
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: https
  selector:
    name: keycloak
  type: LoadBalancer
