templates/install/resources/standard-authservice/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: enmasse
  name: standard-authservice
spec:
  ports:
  - name: amqps
    port: 5671
    protocol: TCP
    targetPort: amqps
  - name: https
    port: 8443
    protocol: TCP
    targetPort: https
  selector:
    name: keycloak
