templates/install/resources/standard-authservice/route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: enmasse
  name: keycloak
spec:
  port:
    targetPort: https
  tls:
    termination: passthrough
  to:
    kind: Service
    name: standard-authservice
